微服务入门程序，注册eureka不注册自己，不拉取服务，application.properties设置

--- a/micro_service_spring_cloud_parent/demo03_register_center_eureka_10001/pom.xml
+++ b/micro_service_spring_cloud_parent/demo03_register_center_eureka_10001/pom.xml
@@ -53,6 +53,7 @@
         </plugins>
     </build>
 
+    <!-- 阿里云目前还没有更新，所以需要保留官网的仓库地址 -->
     <repositories>
         <repository>
             <id>spring-milestones</id>
