--- a/micro_service_spring_cloud_parent/demo03_register_center_eureka_10001/src/main/resources/application.properties
+++ b/micro_service_spring_cloud_parent/demo03_register_center_eureka_10001/src/main/resources/application.properties
@@ -1,7 +1,11 @@
-
+# 服务器名称
 spring.application.name=demo03_register_center_eureka_10001
+# 端口号
 server.port=10001
+# eureka 服务地址，如果是集群的话；需要指定其它集群eureka地址
 eureka.client.service-url.defaultZone=${defaultZone:http://127.0.0.1:10001/eureka}
 
-
-
+# not register myself 不注册自己
+eureka.client.register-with-eureka=false
+# not query myself  不拉取服务
+eureka.client.fetch-registry=false
